--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.23.6",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.21.0",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
